# triocfd-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
doc/: conf.py  index.rst  modules.rst  trioapi.rst
doc/example/: Basic_scheme_modification.ipynb  Cas_turbulence_modified.data  Discretization_modification.ipynb  Postprocessing_modification.ipynb
src/trioapi/: Obstacle.data  __init__.py  api.py  attributes.py  canal_plan_pb_multi.data  conditions.py  deletion.py  discretization.py  docond.data  interprete.py  jdd-komega.data  jdd.py  postraitement.py  test.data  trustify_gen.py  trustify_gen_pyd.py
src/trioapi/Turbulence/K_EPS_BICEPHALE_VEF_2D/: Cas.data
src/trioapi/Turbulence/K_EPS_STANDARD_VDF_2D/: Cas.data
src/trioapi/Turbulence/K_EPS_STANDARD_VDF_3D/: Cas.data
src/trioapi/Turbulence/K_EPS_STANDARD_VEF_3D/: Cas.data
src/trioapi/Turbulence/PERIO/: diffuseur_perio.med
src/trioapi/data/: Cas.data  Obstacle.data  test.data
test/: test.data  test_discretization.py  test_interprete.py  test_parsing_data.py  test_postraitement_pb.py  time_import.py  upwind_simplified.data
test/CMFD/: canal_plan_pb_hydr.data
test/Turbulence/DIFFUSEUR/: Cas.data
test/Turbulence/K_EPS_BICEPHALE_VDF_2D/: Cas.data
test/Turbulence/K_EPS_BICEPHALE_VDF_3D/: Cas.data
test/Turbulence/K_EPS_BICEPHALE_VEF_3D/: Cas.data
test/Turbulence/PERIO/: Cas_perio.data
