[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "trioapi"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
    "pydantic>=2.9.2",
    "trustify",
]

[dependency-groups]
dev = [
    "jupyter-sphinx>=0.5.3",
    "marimo>=0.11.26",
    "matplotlib>=3.10.1",
    "nbsphinx>=0.9.6",
    "pytest>=8.3.5",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.uv.sources]
trustify = { path = "../trustify" }
